k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messenger-app
  namespace: messenger
  labels:
    app: messenger
spec:
  type: ClusterIP
  selector:
    app: messenger
  ports:
    - name: http
      port: 80
      targetPort: http
